changed a bit of styling in the player populator

--- a/src/components/playerSearch/PlayerPopulator.css
+++ b/src/components/playerSearch/PlayerPopulator.css
@@ -1,13 +1,10 @@
 .populatorContainer {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   margin: 20px
 }
 
-.playerSelection {
-  display: flex;
-  justify-content: center
-}
+
 
 /* Need to put button group in a div first */
 /* .buttonGroup {
