Squad component is working. Now whoever is signed in will see what players are in their squad when they click the View My Squad button.

--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,8 +1,14 @@
+/* font-family: 'Bangers', cursive;
+font-family: 'Audiowide', cursive;
+font-family: 'Bungee Inline', cursive; */
+
 .title {
   text-align: center;
-  width: 100%
+  width: 100%;
+  font-family: 'Bungee Inline', cursive;
 }
 
 .nav-logo {
   height: 70px
 }
+
