--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -5,10 +5,30 @@ font-family: 'Bungee Inline', cursive; */
 .title {
   text-align: center;
   width: 100%;
-  font-family: 'Bungee Inline', cursive;
+  /* font-family: 'Staatliches', cursive; */
+  font-weight: bold;
+  color: #f58e08;
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 10px;
+  border: none;
+  font: normal 38px/normal "Warnes", Helvetica, sans-serif;
+  color: #ffffff;
+  text-decoration: normal;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #f59505 , 0 0 70px #f59505 , 0 0 80px #f59505, 0 0 100px #f59505 ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .nav-logo {
-  height: 70px
+  height: 70px;
+  border-radius: 30px
 }
-
