more styling to the navbar as well as the playercard

--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -32,3 +32,7 @@ font-family: 'Bungee Inline', cursive; */
   height: 70px;
   border-radius: 30px
 }
+
+.menu {
+  margin-bottom: 50px !important
+}
