--- a/src/components/playerSearch/PlayerSearch.css
+++ b/src/components/playerSearch/PlayerSearch.css
@@ -1,7 +1,8 @@
 .searchContainer {
   display: flex;
   flex-direction: column;
-  margin: 20px
+  margin: 20px;
+  margin-top: 50px
 }
 
 .searchHeader {
