--- a/src/components/playerSearch/PlayerPopulator.css
+++ b/src/components/playerSearch/PlayerPopulator.css
@@ -4,10 +4,37 @@
   margin: 20px
 }
 
+.selectedPlayer {
+  border: 5px solid #d6850a;
+  display: flex;
+  margin: 20px;
+  flex-direction: column;
+  align-items: center; 
+  font-family: 'Staatliches', cursive;
+  font-size: large;
+  /* position: relative; */
+  overflow: hidden;
+  border-radius: 20px;
+  margin: 10px;
+  min-width: 230px; 
+  max-width: 1100px; 
+  width: 100%;
+  color: #ffffff;
+  text-align: left;
+  line-height: 1.4em;
+  background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
+  
+}
+
+#populatorButtons {
+  display: flex;
+  align-items: center;
+  width: 100%
+}
 
 
-/* Need to put button group in a div first */
 /* .buttonGroup {
   display: flex;
-  justify-content: center
+  align-items: center;
+  width: 100%
 } */
