--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-image: url(http://s1.picswalls.com/wallpapers/2014/07/25/basketball-background_041013638_92.jpg) */
 }
+
+#root {
+  background:   
+    linear-gradient(rgba(0,0,0,.05), rgba(0,0,0,.6)),
+    url(https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia.istockphoto.com%2Fphotos%2Fbasketball-court-picture-id503339486%3Fk%3D6%26m%3D503339486%26s%3D170667a%26w%3D0%26h%3DFtkBj3rUwhYkMrsGOUxzE9Z5Xb809v7Oi_2y7lWp_tA%3D&f=1) no-repeat fixed;
+  /* background-repeat: no-repeat;
+  background-position: fixed; */
+  background-size: cover;
+  /* background-position: center center; */
+  /* max-width: 100%; */
+  min-height: 100vh;
+  
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -15,6 +30,9 @@ code {
     monospace;
 }
 
+/* .root {
+  background-image: url(http://s1.picswalls.com/wallpapers/2014/07/25/basketball-background_041013638_92.jpg)
+} */
 
 .container {
   background-color: white;
