--- a/src/components/playerSearch/PlayerPopulator.css
+++ b/src/components/playerSearch/PlayerPopulator.css
@@ -1,11 +1,11 @@
 .populatorContainer {
   display: flex;
   justify-content: center;
-  margin: 20px
+  margin: 10px
 }
 
 .selectedPlayer {
-  border: 5px solid #d6850a;
+  border: 12px groove #f89603;
   display: flex;
   margin: 20px;
   flex-direction: column;
@@ -16,14 +16,19 @@
   overflow: hidden;
   border-radius: 20px;
   margin: 10px;
-  min-width: 230px; 
-  max-width: 1100px; 
+  min-height: 311px;
+  min-width: 430px; 
   width: 100%;
   color: #ffffff;
   text-align: left;
   line-height: 1.4em;
-  background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
-  
+  background:
+radial-gradient(black 15%, transparent 16%) 0 0,
+radial-gradient(black 15%, transparent 16%) 8px 8px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+background-color:#282828;
+background-size:16px 16px;
 }
 
 #populatorButtons {
