--- a/src/components/playerSearch/PlayerSearch.css
+++ b/src/components/playerSearch/PlayerSearch.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   margin: 20px;
-  margin-top: 50px
+  margin-top: 50px;
+  padding-bottom: 60px
 }
 
 .searchHeader {
@@ -14,4 +15,9 @@
 .searchBox {
   display: flex;
   justify-content: center
+}
+
+.ui {
+  font-size: large;
+  font-weight: bolder
 }
