--- a/src/components/squad/Squad.css
+++ b/src/components/squad/Squad.css
@@ -10,7 +10,7 @@
   /* border: 2px solid rgb(250, 145, 7); */
   /* border: 2px solid black; */
   /* margin: 5px; */
-  border: 3px solid #d6850a;
+  border: 12px groove #f89603;
   display: flex;
   margin: 20px;
   flex-direction: column;
@@ -27,11 +27,13 @@
   color: #ffffff;
   text-align: left;
   line-height: 1.4em;
-  background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
+  background:
+radial-gradient(black 15%, transparent 16%) 0 0,
+radial-gradient(black 15%, transparent 16%) 8px 8px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+background-color:#282828;
+background-size:16px 16px;
   
 }
 
