--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 #root {
   background:   
     linear-gradient(rgba(0,0,0,.05), rgba(0,0,0,.6)),
-    url(https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fmhnation.com%2Fwp-content%2Fuploads%2F2016%2F03%2FiStock_000059188864_XXXLarge-e1459304602927.jpg&f=1) no-repeat fixed;
+    url(https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.chelseatoronto.com%2Fen%2Fuploads%2Fimages%2F2016%2F11%2Fbasketball-arena-000060225400_xxxlarge-home-page-banner.jpg&f=1) no-repeat fixed;
   /* background-repeat: no-repeat;
   background-position: fixed; */
   background-size: cover;
